Some editions are added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet"> -->
 <title>Poorex</title>
+<link rel="shortcut icon" href="./assets/icon/donation-favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -29,26 +30,26 @@
                                     </li>
                                     <li>
                                         <a class="navbar-text" href="#"><img src="./assets/icon/facebook.svg" alt=""
-                                                width="18px"></a>
+                                                width="15px"></a>
                                     </li>
                                     <li>
                                         <a class="navbar-text" href="#"><img src="./assets/icon/instagram.svg" alt=""
-                                                width="18px"></a>
+                                                width="15px"></a>
                                     </li>
                                     <li>
                                         <a class="navbar-text" href="#"><img src="./assets/icon/pinterest.svg" alt=""
-                                                width="18px"></a>
+                                                width="15px"></a>
                                     </li>
                                     <li>
                                         <a class="navbar-text" href="#"><img src="./assets/icon/twitter.svg" alt=""
-                                                width="18px"></a>
+                                                width="15px"></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="contac_side">
                                 <div class="taxt-2">
                                     <span class="navbar-text-1">
-                                        <img src="./assets/icon/location.svg" alt="">
+                                        <img src="./assets/icon/location.svg" alt="" width="15px">
                                         <a href="https://www.google.com/maps/place/BCI+New+Media/@24.8669715,67.081011,17z/data=!4m14!1m7!3m6!1s0x3eb33ea572edd55f:0x1d843381fe9fc16d!2sBCI+New+Media!8m2!3d24.8669715!4d67.081011!16s%2Fg%2F11c1p4gn46!3m5!1s0x3eb33ea572edd55f:0x1d843381fe9fc16d!8m2!3d24.8669715!4d67.081011!16s%2Fg%2F11c1p4gn46?entry=ttu"
                                             target="_blank">BCI new media</a>
                                     </span>
@@ -62,12 +63,16 @@
                         </div>
                         <div class="bottom-bar">
                             <div class="nav_links">
+                                <span class="closebtn">
+                                    <img src="./assets/icon/9165680_cross_delete_icon.png" alt="" width="30px">
+                                </span>
                                 <ul>
                                     <li class="has-menu">
                                         <a href="./index.html">Home</a>
                                     </li>
                                     <li class="has-menu">
                                         <a href="./about.html">pages</a>
+                                        <span class="menu_plus">+</span>
                                         <ul class="sub-menu">
                                             <li><a href="./about.html">about us</a></li>
                                             <li><a href="./team.html">Team</a></li>
@@ -85,6 +90,7 @@
                                     </li>
                                     <li class="has-menu">
                                         <a href="./Donation-Details.html">Donation</a>
+                                        <span class="menu_plus">+</span>
                                         <ul class="sub-menu">
                                             <li><a href="./Donation-1.html">Donation 1</a></li>
                                             <li><a href="./Donation-2.html">Donation 2</a></li>
@@ -94,6 +100,7 @@
                                     </li>
                                     <li class="has-menu">
                                         <a href="./Detail.html">Events</a>
+                                        <span class="menu_plus">+</span>
                                         <ul class="sub-menu">
                                             <li><a href="./Event.html">Event</a></li>
                                             <li><a href="./Event-Details.html">Event Details</a></li>
@@ -111,11 +118,11 @@
                             <div class="contac_side">
                                 <div class="text-2">
                                     <span class="navbar-text">
-                                        <img src="./assets/icon/search.svg" alt="" width="25px">
+                                        <img src="./assets/icon/search.svg" alt="" width="20px">
                                     </span>
 
                                     <span class="navbar-text-2">
-                                        <img src="./assets/icon/admin.svg" alt="" width="25px">
+                                        <img src="./assets/icon/admin.svg" alt="" width="20px">
                                     </span>
                                     <button class="button index-button">Donate Now</button>
                                     <div class="humburger-1">
@@ -159,6 +166,7 @@
             </div>
         </section>
         <!-- Banner section end -->
+
 
         <!-- card line start -->
 
@@ -529,7 +537,7 @@
         <section>
             <div class="main_banner_1" style="background-image: url(./assets/testimonial/testimonial-bg.jpg);">
                 <div class="container-fluid tp_main_section">
-                    <div class="row g-0">
+                    <div class="row gy-5 g-0">
                         <div class="col-12 col-sm-5">
                             <div class="tp_inner_context">
 
@@ -540,8 +548,8 @@
                                     <h2>What Our Client Tell About?</h2>
                                 </div>
                                 <div class="tp_section_pera">
-                                    <p> Charity is the act of exte kindneuncondit ionalwhich <br> is a conscious act but
-                                        the decision is made by the heart,<br> without expecting act but the decision
+                                    <p> Charity is the act of exte kindneuncondit ionalwhich is a conscious act but
+                                        the decision is made by the heart, without expecting act but the decision
                                     </p>
                                 </div>
                                 <div class="tp_section_btn">
@@ -552,7 +560,7 @@
 
 
                         <div class="col-12 col-sm-7 ">
-                            <div class="row">
+                            <div class="row g-0">
                                 <div class="col-12 col-lg-6 col-xl-4">
                                     <div class="card card_4">
                                         <div class="quotes">
@@ -1028,8 +1036,6 @@
 
     <!--       footer   end      -->
 
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./assets/app.js"></script>
