--- a/Event-Details.html
+++ b/Event-Details.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events Details</title>
-    <link rel="shortcut icon" href="./assets/img.icons8.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icon/donation-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -60,12 +60,16 @@
                 </div>
                 <div class="col-md-6 col-6">
                     <div class="nav_links">
+                        <span class="closebtn">
+                            <img src="./assets/icon/9165680_cross_delete_icon.png" alt="" width="30px">
+                        </span>
                         <ul>
                             <li class="has-menu">
                                 <a href="./index.html">Home</a>
                             </li>
                             <li class="has-menu">
                                 <a href="./about.html">pages</a>
+                                <span class="menu_plus">+</span>
                                 <ul class="sub-menu">
                                     <li><a href="./about.html">about us</a></li>
                                     <li><a href="./team.html">Team</a></li>
@@ -83,6 +87,7 @@
                             </li>
                             <li class="has-menu">
                                 <a href="./Donation-Details.html">Donation</a>
+                                <span class="menu_plus">+</span>
                                 <ul class="sub-menu">
                                     <li><a href="./Donation-1.html">Donation 1</a></li>
                                     <li><a href="./Donation-2.html">Donation 2</a></li>
@@ -92,6 +97,7 @@
                             </li>
                             <li class="has-menu">
                                 <a href="./Detail.html">Events</a>
+                                <span class="menu_plus">+</span>
                                 <ul class="sub-menu">
                                     <li><a href="./Event.html">Event</a></li>
                                     <li><a href="./Event-Details.html">Event Details</a></li>
@@ -108,6 +114,23 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-3">
+                    <!-- <div class="contac_side">
+                        <div class="about-text-2">
+                            <span>
+                                <img src="./assets/icon/search.svg" alt="" width="38px">
+                            </span>
+
+                            <span>
+                                <img src="./assets/icon/admin.svg" alt="" width="35px">
+                            </span>
+                            <button class="button"> Donat Now</button>
+                            <div class="humburger-1">
+                                <img src="./assets/icon/_humburger.webp" alt="" width="50px">
+                            </div>
+                        </div>  
+                    </div> -->
+
+
 
                     <div class="contac_side">
                         <div class="text-2">
